Carlos Rueda - MMI / MBARI

ChangeLog

2008-12-29   0.2.0.beta3 (20081229)
	- sparql: "select" query now also process new "form" parameter, which can be
	  "html" (the default) or csv.
	- updated sparql.html page.
	
	- dispatch new commands: vocabs, mappings.  
	  Parameter "uv" can be used to get both unversioned and versioned URIs: uv=true.  
	  By default, only unversioned URIs are returned.

2008-12-03   0.2.0.beta2 (20081203)
	- Dispatch the "root" request to report information about this service, ie.
	      http://mmisw.org/ont/
	  now reports something like:
	  
				  MMI Ontology URI Resolver
			This service is part of the MMI Semantic Framework
			
			MMI Ontology URI Resolver. Version 0.2.0.beta2 (20081203)

	  instead of returning 404.
	
	
2008-11-18   0.2.0.beta2 (20081118)
	- 62: default URL not resolving 
	Db.getOntologyVersions: the term component in the given URI is ignored.
	
	
2008-11-14  0.2.0.beta (20081114)
	
	- Issue 53: unversioned reponse wrong for "slash" ontologies 
	UnversionedConverter: Using JenaUtil2 to handle the fragments as in OntMd
	(TODO JenaUtil2.java is a copy of the same file on ontmd -> unify in a libray)
	
	
	- resolve term in html:  First, try with / separator; then with #
	  Note: jena resolves a request with #, even if everything in the ontology
	  is defined in terms of the slash. Then, since the tries were #-then-/ before,
	  the # resolution was OK but made the rest of the dispatch unable to find
	  statametes associated with the term.  With the new order /-then-#, this
	  is now correct.
	
	- Deprecating MdDispatcher - MD display no longer done here (use ontmd instead)
	TODO: See if MdHelper can also be deprecated/removed when doing code clean-up
	
	
2008-11-13  0.2.0.beta (20081113)
	- preliminary tests of unversioned response seem OK
	  Issue 24, part 2): http://code.google.com/p/mmisw/issues/detail?id=24
	  
	  
2008-11-12
	- Starting "unversioned" version request dispatch
	
	
	
2008-11-11   (Happy B-day Ini!)